2007-03-28  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile (fatfs.static): New target.

	* main.c (diskfs_readonly): Remove variable.
	(main): Set `diskfs_readonly' and `diskfs_hard_readonly' to one.

2005-07-12  Marcus Brinkmann  <marcus@gnu.org>

	* pager.c (diskfs_get_filemap): Initialize upi->max_prot to PROT.

2003-08-09  Marcus Brinkmann  <marcus@gnu.org>

	* fat.h: Include <byteswap.h>.
	(read_dword) [BYTE_ORDER == BIG_ENDIAN]: Use bswap_32 to swap bytes.
	(write_dword) [BYTE_ORDER == BIG_ENDIAN]: Likewise.
	(read_word) [BYTE_ORDER == BIG_ENDIAN]: Use bswap_16 to swap bytes.
	(write_word) [BYTE_ORDER == BIG_ENDIAN]: Likewise.

2003-08-03  Marco Gerards  <metgerards@student.han.nl>

	* fatfs.h (struct disknode): New member DIRNODE.
	* inode.c (read_node): Added assertion to be sure the directory
	can always be found.  Add directory dependancy to node by
	initializing DIRNODE and holding a reference.
	(diskfs_node_norefs): Release reference to DIRNODE.
	(write_node): Don't use diskfs_cached_lookup to lookup the
	directory, use DIRNODE instead and lock DP.  Don't use diskfs_nput,
	use mutex_unlock instead.
	(diskfs_alloc_node): Add directory dependancy to node by
	initializing DIRNODE and holding a reference.

2003-08-05  Marcus Brinkmann  <marcus@gnu.org>

	* fat.c (fat_read_sblock): Catch error from store_read.

2003-08-03  Marco Gerards  <metgerards@student.han.nl>

	* inode.c (read_node): Fix typo.

2003-08-01  Marco Gerards  <metgerards@student.han.nl>

	* node-create.c: New file.
	* Makefile (SRCS): Added node-created.c.
	* dir.c: Include <hurd/fsys.h>.
	(diskfs_direnter_hard): Initialize a new block with zeros. Enter
	direntry and setup the virtual	inode. Also handle directories
	correctly.
	(diskfs_rewrite_hard): Function rewritten.
	(diskfs_dirempty): Change logic to test if a file was deleted.
	* fat.c (fat_extend_chain): Unlock spin_lock when returning from
	function. Set dn->last to 0 when deallocating the complete